==============
lxml changelog
==============

Under development
=================

Features added
--------------

* Parsing from a plain file object frees the GIL.

* Running ``iterparse()`` on a plain file (or filename) frees the GIL
  on reading.

* Conversion functions ``html_to_xhtml()`` and ``xhtml_to_html()`` in
  lxml.html (experimental).

* Most features in lxml.html work for XHTML namespaced tag names
  (experimental).

Bugs fixed
----------

* Rare crash when serialising to a file object with certain encodings.

Other changes
-------------

* Up to several times faster attribute access (i.e. tree traversal) in
  lxml.objectify.


2.1beta2 (2008-05-02)
=====================

Features added
--------------

* All parse functions in lxml.html take a ``parser`` keyword argument.

* lxml.html has a new parser class ``XHTMLParser`` and a module
  attribute ``xhtml_parser`` that provide XML parsers that are
  pre-configured for the lxml.html package.

Bugs fixed
----------

* Moving a subtree from a document created in one thread into a
  document of another thread could crash when the rest of the source
  document is deleted while the subtree is still in use.

* Passing an nsmap when creating an Element will no longer strip
  redundantly defined namespace URIs.  This prevented the definition
  of more than one prefix for a namespace on the same Element.

Other changes
-------------

* If the default namespace is redundantly defined with a prefix on the
  same Element, the prefix will now be preferred for subelements and
  attributes.  This allows users to work around a problem in libxml2
  where attributes from the default namespace could serialise without
  a prefix even when they appear on an Element with a different
  namespace (i.e. they would end up in the wrong namespace).


2.0.5 (2008-05-01)
==================

Features added
--------------

Bugs fixed
----------

* Resolving to a filename in custom resolvers didn't work.
