@@ -8,6 +8,9 @@ Under development
 Features added
 --------------
 
+* File name handling now uses a heuristic to convert between byte
+  strings and unicode strings.
+
 * Parsing from a plain file object frees the GIL.
 
 * Running ``iterparse()`` on a plain file (or filename) frees the GIL
